--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ p {
 /* Nav Styles
 ---------------------------------*/
 .navbar-inverse {
-    background-color: transparent;
+    background-color: black;
     border-color: transparent;
 }
 
