--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ p {
 ---------------------------------*/
 .navbar-inverse {
     background-color: black;
-    border-color: transparent;
+    border-color: black;
 }
 
 .navbar {
