--- a/css/style.css
+++ b/css/style.css
@@ -318,24 +318,24 @@ p {
 .navStyle > li > a:hover, .nav > li > a:focus {
     text-decoration: none;
     color: #ED5441;
-    background-color: transparent;
+    background-color: black;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     color: #CA133A;
-    background-color: transparent;
+    background-color: black;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     color: #CB143B;
-    background-color: transparent;
+    background-color: black;
 }
 
 .navStyle > li.active > a,
 .navStyle > li.active > a:hover {
     text-decoration: none;
     color: #ED5441;
-    background-color: transparent;
+    background-color: black;
 }
 
 .borderLeft {
@@ -1957,7 +1957,7 @@ padding: 60px 0 50px;
 background:#ED5441;
 }
 .navbar-inverse .navbar-toggle {
-border-color: transparent;
+border-color: black;
 }
 .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{
 background:none;
