--- a/css/style.css
+++ b/css/style.css
@@ -312,12 +312,12 @@ p {
 }
 
 .navStyle ul li a:hover {
-    color: #ED5441;
+    color: #40E0D0;
 }
 
 .navStyle > li > a:hover, .nav > li > a:focus {
     text-decoration: none;
-    color: #ED5441;
+    color: #40E0D0;
     background-color: transparent;
 }
 
@@ -334,7 +334,7 @@ p {
 .navStyle > li.active > a,
 .navStyle > li.active > a:hover {
     text-decoration: none;
-    color: #ED5441;
+    color: #40E0D0;
     background-color: transparent;
 }
 
@@ -354,7 +354,7 @@ p {
 ---------------------------------*/
 
 .top_cont_outer {
-    background: #ED5441;
+    background: #40E0D0;
     position: relative;
 	
     background: #CE1139;
@@ -448,8 +448,8 @@ a.read_more2:hover, a.read_more:hover {
 }
 a.read_more:hover {
     background: #fff;
-    color: #ED5441;
-    border: 1px solid #ED5441;
+    color: #40E0D0;
+    border: 1px solid #40E0D0;
 }
 
 	
@@ -601,11 +601,11 @@ a.contact_btn {
     text-align: center;
     line-height: 49px;
     font-size: 16px;
-    color: #ED5441;
+    color: green;
     border-radius: 3px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    border: 2px solid #ED5441;
+    border: 2px solid #40E0D0;
     transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
@@ -657,7 +657,7 @@ a.contact_btn:hover {
 }
 
 .Portfolio-nav li a:hover {
-    background: #ED5441;
+    background: #40E0D0;
     color: #fff;
     text-decoration: none;
 }
@@ -687,7 +687,7 @@ a.contact_btn:hover {
 }
 
 .Portfolio-nav li a.current {
-    background: #ED5441;
+    background: #40E0D0;
     color: #fff;
     text-decoration: none;
 }
@@ -817,7 +817,7 @@ background-size: auto 100%;
 background-position-y: 70px;
 }
 #about-us .read-more{
-	border: 1px solid #ED5441;
+	border: 1px solid #40E0D0;
 	color: #1a1a1a;
 }
 
@@ -1050,7 +1050,7 @@ border: 1px solid #CE1139;
 }
 
 .contact_block_icon.icon2 {
-    border-color: #ED5441;
+    border-color: #40E0D0;
 }
 
 .contact_block_icon.icon3 {
@@ -1067,11 +1067,11 @@ border: 1px solid #CE1139;
 }
 
 .contact_block_icon.icon2 {
-    border-color: #ED5441;
+    border-color: #40E0D0;
 }
 
 .contact_block_icon.icon2 span {
-    background: #ED5441;
+    background: #40E0D0;
 }
 
 .contact_block_icon.icon3 {
@@ -1954,7 +1954,7 @@ font-size: 30px;
 padding: 60px 0 50px;
 } 
 .navbar-inverse .navbar-toggle .icon-bar{
-background:#ED5441;
+background:#40E0D0;
 }
 .navbar-inverse .navbar-toggle {
 border-color: transparent;
