--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a, a:hover, a:active {
 /* Common style */
 .grid figure {
 	position: relative;
-	float: left;
+	float: middle;
 	overflow: hidden;
 	margin: 10px 1%;
 	min-width: 320px;
