--- a/css/style.css
+++ b/css/style.css
@@ -1373,7 +1373,7 @@ border: 1px solid #CE1139;
 }
 
 .section-title h2 {
-    color: #222222;
+    color: ##FF2400;
     font-family: 'Raleway', sans-serif;
     font-size: 34px;
     letter-spacing: -1px;
