--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:800,700,400);
 @import url(http://fonts.googleapis.com/css?family=Signika:400,600);
 
+/* Remove side scroll and prevent horizontal overflow */
+html, body {
+    overflow-x: hidden !important;
+    width: 100vw;
+    max-width: 100vw;
+}
+
 /* Reset
 ---------------------------------*/
 ul {
@@ -18,7 +25,7 @@ img {
 
 a, a:hover, a:active {
     outline: 0px !important;
-	text-decoration:none;
+    text-decoration:none;
 }
 .clear {
     clear: both;
@@ -44,77 +51,77 @@ a, a:hover, a:active {
 
 /* Common style */
 .grid figure {
-	position: relative;
-	float: middle;
-	overflow: hidden;
-	margin: 10px 1%;
-	min-width: 320px;
-	max-width: 480px;
-	max-height: 360px;
-	width: 48%;
-	background: #3085a3;
-	text-align: center;
-	cursor: pointer;
+    position: relative;
+    float: middle;
+    overflow: hidden;
+    margin: 10px 1%;
+    min-width: 320px;
+    max-width: 480px;
+    max-height: 360px;
+    width: 48%;
+    background: #3085a3;
+    text-align: center;
+    cursor: pointer;
 }
 
 .grid figure img {
-	position: relative;
-	display: block;
-	min-height: 100%;
-	max-width: 100%;
-	opacity: 0.8;
+    position: relative;
+    display: block;
+    min-height: 100%;
+    max-width: 100%;
+    opacity: 0.8;
 }
 
 .grid figure figcaption {
-	padding: 2em;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 1.25em;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
+    padding: 2em;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .grid figure figcaption::before,
 .grid figure figcaption::after {
-	pointer-events: none;
+    pointer-events: none;
 }
 
 .grid figure figcaption,
 .grid figure figcaption > a {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
 .grid figure figcaption > a {
-	z-index: 1000;
-	text-indent: 200%;
-	white-space: nowrap;
-	font-size: 0;
-	opacity: 0;
+    z-index: 1000;
+    text-indent: 200%;
+    white-space: nowrap;
+    font-size: 0;
+    opacity: 0;
 }
 
 .grid figure h2 {
-	word-spacing: -0.15em;
-	font-weight: 300;
+    word-spacing: -0.15em;
+    font-weight: 300;
 }
 
 .grid figure h2 span {
-	font-weight: 800;
+    font-weight: 800;
 }
 
 .grid figure h2,
 .grid figure p {
-	margin: 0;
+    margin: 0;
 }
 
 .grid figure p {
-	letter-spacing: 1px;
-	font-size: 68.5%;
+    letter-spacing: 1px;
+    font-size: 68.5%;
 }
 
 /*---------------*/
@@ -122,71 +129,71 @@ a, a:hover, a:active {
 /*---------------*/
 
 figure.effect-oscar {
-	background: -webkit-linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #3a342a 100%);
-	background: linear-gradient(45deg, #22682a 0%,#9b4a1b 40%,#3a342a 100%);
+    background: -webkit-linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #3a342a 100%);
+    background: linear-gradient(45deg, #22682a 0%,#9b4a1b 40%,#3a342a 100%);
 }
 
 figure.effect-oscar img {
-	opacity: 0.9;
-	-webkit-transition: opacity 0.35s;
-	transition: opacity 0.35s;
+    opacity: 0.9;
+    -webkit-transition: opacity 0.35s;
+    transition: opacity 0.35s;
 }
 
 figure.effect-oscar figcaption {
-	padding: 3em;
-	background-color: rgba(58,52,42,0.7);
-	-webkit-transition: background-color 0.35s;
-	transition: background-color 0.35s;
+    padding: 3em;
+    background-color: rgba(58,52,42,0.7);
+    -webkit-transition: background-color 0.35s;
+    transition: background-color 0.35s;
 }
 
 figure.effect-oscar figcaption::before {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-	bottom: 30px;
-	left: 30px;
-	border: 1px solid #fff;
-	content: '';
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    bottom: 30px;
+    left: 30px;
+    border: 1px solid #fff;
+    content: '';
 }
 
 figure.effect-oscar h2 {
-	margin: 20% 0 10px 0;
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-	-webkit-transform: translate3d(0,100%,0);
-	transform: translate3d(0,100%,0);
-	color:#A3A3A3;
+    margin: 20% 0 10px 0;
+    -webkit-transition: -webkit-transform 0.35s;
+    transition: transform 0.35s;
+    -webkit-transform: translate3d(0,100%,0);
+    transform: translate3d(0,100%,0);
+    color:#A3A3A3;
 }
 
 figure.effect-oscar figcaption::before,
 figure.effect-oscar p {
-	opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: scale(0);
-	transform: scale(0);
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: scale(0);
+    transform: scale(0);
 }
 
 figure.effect-oscar:hover h2 {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-	color:#fff;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+    color:#fff;
 }
 
 figure.effect-oscar:hover figcaption::before,
 figure.effect-oscar:hover p {
-	opacity: 1;
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	color:#fff;+++++++
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    color:#fff;
 }
 
 figure.effect-oscar:hover figcaption {
-	background-color: rgba(58,52,42,0);
+    background-color: rgba(58,52,42,0);
 }
 
 figure.effect-oscar:hover img {
-	opacity: 0.4;
+    opacity: 0.4;
 }
 
 /* Styles
@@ -198,6 +205,8 @@ body {
     font-weight: normal;
     color: #888888;
     margin: 0;
+    overflow-x: hidden !important;
+    max-width: 100vw;
 }
 
 h2 {
@@ -238,9 +247,8 @@ p {
 #header_wrapper {
     background: #ffffff;
     padding: 20px 0px;
-	
     border-top: bisque;
-	box-shadow: 1px 1px 4px rgba(60, 60, 60, 0.44);
+    box-shadow: 1px 1px 4px rgba(60, 60, 60, 0.44);
     border-bottom: 1px solid #D2D2D2;
 }
 
@@ -251,14 +259,14 @@ p {
 .logo {
     float: left;
     margin-top: 8px;
-	position: relative;
-	z-index: 2;
+    position: relative;
+    z-index: 2;
 }
 
 .res-nav_click {
     display: none;
 }
-	
+    
 
 /* Nav Styles
 ---------------------------------*/
@@ -288,10 +296,11 @@ p {
 .navStyle ul li {
     display: inline-block;
     margin: 0 5px;
+    position: relative;
 }
 
 .navStyle ul li:first-child {
-	/*margin:0px;*/;
+    /*margin:0px;*/
 }
 
 .navStyle ul li:last-child {
@@ -311,8 +320,37 @@ p {
     -webkit-transition: all 0.2s ease-in-out;
 }
 
-.navStyle ul li a:hover {
+/* Distinct submenu hover colors */
+/* Assumes submenus have classes like .submenu-1, .submenu-2, etc. */
+
+.navStyle ul li.submenu-1 > a:hover,
+.navStyle ul li.submenu-1:hover > a {
+    background-color: #ED5441;
+    color: #fff;
+}
+
+.navStyle ul li.submenu-2 > a:hover,
+.navStyle ul li.submenu-2:hover > a {
+    background-color: #49b5e7;
+    color: #fff;
+}
+
+.navStyle ul li.submenu-3 > a:hover,
+.navStyle ul li.submenu-3:hover > a {
+    background-color: #CA133A;
+    color: #fff;
+}
+
+.navStyle ul li.submenu-4 > a:hover,
+.navStyle ul li.submenu-4:hover > a {
+    background-color: #FFD700;
+    color: #222;
+}
+
+/* fallback: default hover for others */
+.navStyle ul li:not(.submenu-1):not(.submenu-2):not(.submenu-3):not(.submenu-4) > a:hover {
     color: #ED5441;
+    background-color: transparent;
 }
 
 .navStyle > li > a:hover, .nav > li > a:focus {
@@ -336,6 +374,58 @@ p {
     text-decoration: none;
     color: #ED5441;
     background-color: transparent;
+}
+
+/* Submenu styles */
+.navStyle ul li ul {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background: #fff;
+    min-width: 180px;
+    z-index: 9999;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.07);
+    border-radius: 0 0 5px 5px;
+}
+.navStyle ul li:hover > ul {
+    display: block;
+}
+.navStyle ul li ul li {
+    display: block;
+    margin: 0;
+}
+.navStyle ul li ul li a {
+    color: #222;
+    font-weight: 400;
+    font-size: 13px;
+    text-transform: none;
+    padding: 10px 20px;
+    background: none;
+    border-radius: 0;
+    transition: background 0.2s, color 0.2s;
+}
+
+/* Distinct submenu item hover colors */
+.navStyle ul li ul li.submenu-1 a:hover {
+    background: #ED5441;
+    color: #fff;
+}
+.navStyle ul li ul li.submenu-2 a:hover {
+    background: #49b5e7;
+    color: #fff;
+}
+.navStyle ul li ul li.submenu-3 a:hover {
+    background: #CA133A;
+    color: #fff;
+}
+.navStyle ul li ul li.submenu-4 a:hover {
+    background: #FFD700;
+    color: #222;
+}
+.navStyle ul li ul li:not(.submenu-1):not(.submenu-2):not(.submenu-3):not(.submenu-4) a:hover {
+    background: #eee;
+    color: #CA133A;
 }
 
 .borderLeft {
