--- a/css/style.css
+++ b/css/style.css
@@ -270,22 +270,37 @@ p {
 
 /* Nav Styles
 ---------------------------------*/
+/* Change the navigation bar to black color */
 .navbar-inverse {
-    background-color: transparent;
-    border-color: transparent;
+    background-color: #000 !important;
+    border-color: #000 !important;
 }
 
 .navbar {
-    min-height: 40px;
-    margin-bottom: 0px;
+    background-color: #000 !important;
+    border-color: #000 !important;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    color: #222;
+    color: #fff !important;
 }
 
-.navStyle {
-    float: right;
+.navbar-inverse .navbar-nav > li > a:hover, 
+.navbar-inverse .navbar-nav > li > a:focus {
+    color: #FFC000 !important;
+    background-color: transparent !important;
+}
+
+.navStyle ul li a {
+    color: #fff !important;
+}
+
+/* Optional: Active/current page link styling */
+.navbar-inverse .navbar-nav > .active > a, 
+.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:focus {
+    color: #FFC000 !important;
+    background-color: #111 !important;
 }
 
 .navStyle ul {
