--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,8 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:800,700,400);
 @import url(http://fonts.googleapis.com/css?family=Signika:400,600);
 
-{
-    overflow-x: hidden !important;
-    width: 100vw;
-    max-width: 100vw;
-}
-
-
+/* Reset
+---------------------------------*/
 ul {
     list-style: none;
 }
@@ -23,7 +18,7 @@ img {
 
 a, a:hover, a:active {
     outline: 0px !important;
-    text-decoration:none;
+	text-decoration:none;
 }
 .clear {
     clear: both;
@@ -49,77 +44,77 @@ a, a:hover, a:active {
 
 /* Common style */
 .grid figure {
-    position: relative;
-    float: middle;
-    overflow: hidden;
-    margin: 10px 1%;
-    min-width: 320px;
-    max-width: 480px;
-    max-height: 360px;
-    width: 48%;
-    background: #3085a3;
-    text-align: center;
-    cursor: pointer;
+	position: relative;
+	float: middle;
+	overflow: hidden;
+	margin: 10px 1%;
+	min-width: 320px;
+	max-width: 480px;
+	max-height: 360px;
+	width: 48%;
+	background: #3085a3;
+	text-align: center;
+	cursor: pointer;
 }
 
 .grid figure img {
-    position: relative;
-    display: block;
-    min-height: 100%;
-    max-width: 100%;
-    opacity: 0.8;
+	position: relative;
+	display: block;
+	min-height: 100%;
+	max-width: 100%;
+	opacity: 0.8;
 }
 
 .grid figure figcaption {
-    padding: 2em;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+	padding: 2em;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 1.25em;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 .grid figure figcaption::before,
 .grid figure figcaption::after {
-    pointer-events: none;
+	pointer-events: none;
 }
 
 .grid figure figcaption,
 .grid figure figcaption > a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
 .grid figure figcaption > a {
-    z-index: 1000;
-    text-indent: 200%;
-    white-space: nowrap;
-    font-size: 0;
-    opacity: 0;
+	z-index: 1000;
+	text-indent: 200%;
+	white-space: nowrap;
+	font-size: 0;
+	opacity: 0;
 }
 
 .grid figure h2 {
-    word-spacing: -0.15em;
-    font-weight: 300;
+	word-spacing: -0.15em;
+	font-weight: 300;
 }
 
 .grid figure h2 span {
-    font-weight: 800;
+	font-weight: 800;
 }
 
 .grid figure h2,
 .grid figure p {
-    margin: 0;
+	margin: 0;
 }
 
 .grid figure p {
-    letter-spacing: 1px;
-    font-size: 68.5%;
+	letter-spacing: 1px;
+	font-size: 68.5%;
 }
 
 /*---------------*/
@@ -127,71 +122,71 @@ a, a:hover, a:active {
 /*---------------*/
 
 figure.effect-oscar {
-    background: -webkit-linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #3a342a 100%);
-    background: linear-gradient(45deg, #22682a 0%,#9b4a1b 40%,#3a342a 100%);
+	background: -webkit-linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #3a342a 100%);
+	background: linear-gradient(45deg, #22682a 0%,#9b4a1b 40%,#3a342a 100%);
 }
 
 figure.effect-oscar img {
-    opacity: 0.9;
-    -webkit-transition: opacity 0.35s;
-    transition: opacity 0.35s;
+	opacity: 0.9;
+	-webkit-transition: opacity 0.35s;
+	transition: opacity 0.35s;
 }
 
 figure.effect-oscar figcaption {
-    padding: 3em;
-    background-color: rgba(58,52,42,0.7);
-    -webkit-transition: background-color 0.35s;
-    transition: background-color 0.35s;
+	padding: 3em;
+	background-color: rgba(58,52,42,0.7);
+	-webkit-transition: background-color 0.35s;
+	transition: background-color 0.35s;
 }
 
 figure.effect-oscar figcaption::before {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    bottom: 30px;
-    left: 30px;
-    border: 1px solid #fff;
-    content: '';
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	bottom: 30px;
+	left: 30px;
+	border: 1px solid #fff;
+	content: '';
 }
 
 figure.effect-oscar h2 {
-    margin: 20% 0 10px 0;
-    -webkit-transition: -webkit-transform 0.35s;
-    transition: transform 0.35s;
-    -webkit-transform: translate3d(0,100%,0);
-    transform: translate3d(0,100%,0);
-    color:#A3A3A3;
+	margin: 20% 0 10px 0;
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+	-webkit-transform: translate3d(0,100%,0);
+	transform: translate3d(0,100%,0);
+	color:#A3A3A3;
 }
 
 figure.effect-oscar figcaption::before,
 figure.effect-oscar p {
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: scale(0);
-    transform: scale(0);
+	opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(0);
+	transform: scale(0);
 }
 
 figure.effect-oscar:hover h2 {
-    -webkit-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
-    color:#fff;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+	color:#fff;
 }
 
 figure.effect-oscar:hover figcaption::before,
 figure.effect-oscar:hover p {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    color:#fff;
+	opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	color:#fff;+++++++
 }
 
 figure.effect-oscar:hover figcaption {
-    background-color: rgba(58,52,42,0);
+	background-color: rgba(58,52,42,0);
 }
 
 figure.effect-oscar:hover img {
-    opacity: 0.4;
+	opacity: 0.4;
 }
 
 /* Styles
@@ -203,8 +198,6 @@ body {
     font-weight: normal;
     color: #888888;
     margin: 0;
-    overflow-x: hidden !important;
-    max-width: 100vw;
 }
 
 h2 {
@@ -245,8 +238,9 @@ p {
 #header_wrapper {
     background: #ffffff;
     padding: 20px 0px;
+	
     border-top: bisque;
-    box-shadow: 1px 1px 4px rgba(60, 60, 60, 0.44);
+	box-shadow: 1px 1px 4px rgba(60, 60, 60, 0.44);
     border-bottom: 1px solid #D2D2D2;
 }
 
@@ -257,115 +251,91 @@ p {
 .logo {
     float: left;
     margin-top: 8px;
-    position: relative;
-    z-index: 2;
+	position: relative;
+	z-index: 2;
 }
 
 .res-nav_click {
     display: none;
 }
-    
+	
 
-.navbar-inverse, .navbar {
-    background-color: #000 !important;
-    border-color: #000 !important;
+/* Nav Styles
+---------------------------------*/
+.navbar-inverse {
+    background-color: transparent;
+    border-color: transparent;
 }
 
-/* Main navigation links: white text */
-.navbar-inverse .navbar-nav > li > a,
-.navStyle ul li > a {
-    color: #fff !important;
-    background: transparent !important;
-    transition: color 0.2s, background 0.2s;
+.navbar {
+    min-height: 40px;
+    margin-bottom: 0px;
 }
 
-/* Main nav hover/active: yellow highlight */
-.navbar-inverse .navbar-nav > li > a:hover,
-.navbar-inverse .navbar-nav > li > a:focus,
-.navStyle ul li > a:hover,
-.navStyle ul li > a:focus {
-    color: #FFC000 !important;
-    background: #181818 !important;
+.navbar-inverse .navbar-nav > li > a {
+    color: #222;
 }
 
-.navbar-inverse .navbar-nav > .active > a,
-.navbar-inverse .navbar-nav > .active > a:hover,
-.navbar-inverse .navbar-nav > .active > a:focus {
-    color: #FFC000 !important;
-    background: #181818 !important;
+.navStyle {
+    float: right;
 }
 
-/* --- SUBMENU STYLING --- */
+.navStyle ul {
+    list-style: none;
+    padding: 0px;
+}
+
 .navStyle ul li {
-    position: relative;
+    display: inline-block;
+    margin: 0 5px;
 }
 
-.navStyle ul li ul {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    min-width: 180px;
-    z-index: 9999;
-    background: #181818;
-    border-radius: 0 0 5px 5px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.07);
-    padding: 0;
+.navStyle ul li:first-child {
+	/*margin:0px;*/;
 }
 
-.navStyle ul li:hover > ul,
-.navStyle ul li:focus-within > ul {
+.navStyle ul li:last-child {
+    margin: 0 0 0 23px;
+}
+
+.navStyle ul li a {
     display: block;
-}
-
-.navStyle ul li ul li {
-    display: block;
-    margin: 0;
-}
-
-/* --------- SUBMENU ITEM COLORS --------- */
-/* Assign .submenu-1, .submenu-2, .submenu-3, etc. to your submenu <li> for different text and hover colors */
-
-/* Default submenu link style */
-.navStyle ul li ul li a {
-    display: block;
-    padding: 10px 22px;
     font-size: 14px;
-    color: #4FC3F7 !important;  /* Light blue as default for submenu text */
-    background: transparent;
-    font-weight: 500;
-    text-transform: none;
-    border-radius: 0;
-    transition: background 0.2s, color 0.2s;
-}
-
-/* Different submenu text (UNHOVERED) colors */
-.navStyle ul li ul li.submenu-1 > a { color: #4FC3F7 !important; } /* Light Blue */
-.navStyle ul li ul li.submenu-2 > a { color: #81C784 !important; } /* Green */
-.navStyle ul li ul li.submenu-3 > a { color: #FFD54F !important; } /* Yellow */
-.navStyle ul li ul li.submenu-4 > a { color: #FF8A65 !important; } /* Orange */
-.navStyle ul li ul li.submenu-5 > a { color: #BA68C8 !important; } /* Purple */
-.navStyle ul li ul li.submenu-6 > a { color: #E57373 !important; } /* Red */
-.navStyle ul li ul li:not(.submenu-1):not(.submenu-2):not(.submenu-3):not(.submenu-4):not(.submenu-5):not(.submenu-6) > a {
-    color: #B0BEC5 !important; /* Default grey */
-}
-
-/* --------- SUBMENU HOVER COLORS --------- */
-.navStyle ul li ul li.submenu-1 > a:hover { background: #4FC3F7 !important; color: #181818 !important; }
-.navStyle ul li ul li.submenu-2 > a:hover { background: #81C784 !important; color: #181818 !important; }
-.navStyle ul li ul li.submenu-3 > a:hover { background: #FFD54F !important; color: #181818 !important; }
-.navStyle ul li ul li.submenu-4 > a:hover { background: #FF8A65 !important; color: #181818 !important; }
-.navStyle ul li ul li.submenu-5 > a:hover { background: #BA68C8 !important; color: #fff !important; }
-.navStyle ul li ul li.submenu-6 > a:hover { background: #E57373 !important; color: #fff !important; }
-.navStyle ul li ul li:not(.submenu-1):not(.submenu-2):not(.submenu-3):not(.submenu-4):not(.submenu-5):not(.submenu-6) > a:hover {
-    background: #37474F !important;
-    color: #fff !important;
-}
-
-/* Make sure submenu hover is visually distinct from main nav hover */
-.navStyle ul li ul li > a:hover,
-.navStyle ul li ul li > a:focus {
+    color: #222222;
+    font-family: 'Raleway', sans-serif;
     text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+}
+
+.navStyle ul li a:hover {
+    color: #ED5441;
+}
+
+.navStyle > li > a:hover, .nav > li > a:focus {
+    text-decoration: none;
+    color: #ED5441;
+    background-color: transparent;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: #CA133A;
+    background-color: transparent;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    color: #CB143B;
+    background-color: transparent;
+}
+
+.navStyle > li.active > a,
+.navStyle > li.active > a:hover {
+    text-decoration: none;
+    color: #ED5441;
+    background-color: transparent;
 }
 
 .borderLeft {
