--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ a.read_more:hover {
 }
 
 .service_icon i {
-  color: #FFFFFF;
+  color: #000080;
 font-size: 40px;
 margin-top: 0;
 position: relative;
@@ -593,11 +593,11 @@ a.contact_btn {
     text-align: center;
     line-height: 49px;
     font-size: 16px;
-    color: #ED5441;
+    color: #7AC080;
     border-radius: 3px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    border: 2px solid #ED5441;
+    border: 2px solid #7AC080;
     transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
