--- a/css/style.css
+++ b/css/style.css
@@ -312,12 +312,12 @@ p {
 }
 
 .navStyle ul li a:hover {
-    color: #7AC080;
+    color: #05730E;
 }
 
 .navStyle > li > a:hover, .nav > li > a:focus {
     text-decoration: none;
-    color: #7AC080;
+    color: #05730E;
     background-color: transparent;
 }
 
@@ -327,24 +327,24 @@ p {
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    color: #7AC080;
+    color: #05730E;
     background-color: transparent;
 }
 
 .navStyle > li.active > a,
 .navStyle > li.active > a:hover {
     text-decoration: none;
-    color: #7AC080;
+    color: #05730E;
     background-color: transparent;
 }
 
 .borderLeft {
-    border-left: 1px solid #DADADA;
+    border-left: 1px solid #212020; \DADADA\
 }
 
 .borderTop {
     margin-top: 30px;
-    border-top: 1px solid #DADADA;
+    border-top: 1px solid #212020;
 }
 
 .mrgTop {
@@ -422,8 +422,8 @@ a.read_more, a.read_more2 {
     font-family: 'Raleway', sans-serif;
     display: block;
     font-size: 16px;
-    width: 178px;
-    height: 46px;
+    width: 200px;
+    height: 50px;
     line-height: 46px;
     border-radius: 3px;
     text-align: center;
@@ -496,7 +496,7 @@ a.read_more:hover {
 }
 
 .service_icon i {
-  color: #000080;
+  color: #FFDF00;
 font-size: 40px;
 margin-top: 0;
 position: relative;
@@ -593,18 +593,18 @@ a.contact_btn {
     text-align: center;
     line-height: 49px;
     font-size: 16px;
-    color: #7AC080;
+    color: #05730E;
     border-radius: 3px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    border: 2px solid #7AC080;
+    border: 2px solid #05730E;
     transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
 }
 
 a.contact_btn:hover {
-    background: #7AC080;
+    background: #05730E;
     color: #fff;
 }
 
@@ -638,7 +638,7 @@ a.contact_btn:hover {
     padding: 10px 22px;
     font-size: 12px;
     line-height: 20px;
-    color: #222222;
+    color: #063A54;
     border-radius: 4px;
     text-transform: uppercase;
     background: #f7f7f7;
@@ -649,7 +649,7 @@ a.contact_btn:hover {
 }
 
 .Portfolio-nav li a:hover {
-    background: #ED5441;
+    background: #05730E;
     color: #fff;
     text-decoration: none;
 }
@@ -810,7 +810,7 @@ background-position-y: 70px;
 }
 #about-us .read-more{
 	border: 1px solid #ED5441;
-	color: #1a1a1a;
+	color: #012b0d;
 }
 
 #about-us .read-more:hover{
@@ -972,21 +972,6 @@ margin-bottom: 5px;
     text-decoration: none;
 }
 
-.team_box ul li a.fa-twitter:hover {
-    color: #55acee;
-}
-
-.team_box ul li a.fa-facebook:hover {
-    color: #3b5998;
-}
-
-.team_box ul li a.fa-pinterest:hover {
-    color: #cb2026;
-}
-
-.team_box ul li a.fa-google-plus:hover {
-    color: #dd4b39;
-}
  .img-circle {
 border-radius: 50%;
 }
@@ -1146,9 +1131,7 @@ border: 1px solid #CE1139;
     border-radius: 80px;
 }
 
-.twitter a:hover {
-    color: #55acee;
-}
+
 
 .facebook a:hover {
     color: #3b5998;
@@ -1165,57 +1148,6 @@ border: 1px solid #CE1139;
 
 .form {
     margin: 0 66px 0 30px;
-}
-
-.input-text {
-    padding: 15px 16px;
-    border: 1px solid #ccc;
-    width: 100%;
-    height: 50px;
-    display: block;
-    border-radius: 4px;
-    font-size: 15px;
-    color: #aaa;
-    margin: 0 0 15px 0;
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-}
-
-.input-text:focus {
-    border: 1px solid #fff;
-    outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(124, 197, 118, 0.3);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(124, 197, 118, 0.3);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(124, 197, 118, 0.3);
-}
-
-.input-text.text-area {
-    height: 230px;
-    resize: none;
-    overflow: auto;
-    
-}
-
-.input-btn {    
-    width: 175px;
-    height: 50px;
-    letter-spacing: 0px;
-    background: #CE1139;
-    border-radius: 3px;
-    color: #ffffff;
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 600;
-    border: 0px;
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-}
-
-.input-btn:hover {
-    background: #fff;
-    color: #222;
 }
 
 /* Footer
@@ -1306,8 +1238,6 @@ border: 1px solid #CE1139;
 /*new_profolio*/
 
 
-
-	
 /* Portfolio */	
 	
 .container.portfolio_title {
@@ -1989,7 +1919,7 @@ width: 100%;
 text-align: left;
 }
 .navbar {
-border: 0px solid #fff;
+border: 0px solid #19191a;
 min-height: 40px;
 margin-bottom: 0px;
 float: initial;
