--- a/css/style.css
+++ b/css/style.css
@@ -354,10 +354,10 @@ p {
 ---------------------------------*/
 
 .top_cont_outer {
-    background: #8F1709;
+    background: #F4BB44;
     position: relative;
 	
-    background: #CE1139;
+    background: #37393B;
 	height:800px;
 }
 
@@ -419,7 +419,7 @@ letter-spacing: 1px;
 }
 
 a.read_more, a.read_more2 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     display: block;
     font-size: 16px;
     width: 200px;
@@ -443,8 +443,8 @@ a.read_more{
 }
 a.read_more2:hover, a.read_more:hover {
     background: #fff;
-    color: #0593F9;
-    border: 1px solid #fff;
+    color: #0b1715;
+    border: 1px solid #DC143C;
 }
 a.read_more:hover {
     background: #fff;
@@ -529,7 +529,7 @@ color:#fff;
 
 
 #work_outer {
-    background: #f9f9f9;
+    background: #F3DE38;
     padding: 70px 0px;
     position: relative;
 }
@@ -1127,21 +1127,6 @@ border: 1px solid #CE1139;
     text-decoration: none;
     border-radius: 80px;
 }
-
-
-
-.facebook a:hover {
-    color: #3b5998;
-}
-
-.pinterest a:hover {
-    color: #cb2026;
-}
-
-.gplus a:hover {
-    color: #dd4b39;
-}
- 
 
 .form {
     margin: 0 66px 0 30px;
@@ -1873,7 +1858,7 @@ font-size: 30px;
 padding: 60px 0 50px;
 } 
 .navbar-inverse .navbar-toggle .icon-bar{
-background:#ED5441;
+background:#FF5400;
 }
 .navbar-inverse .navbar-toggle {
 border-color: transparent;
